# SitRep

./: .gitignore  README.md  config_example.json  configuration_example.json  pyproject.toml  sitrep.py  stylesheet.css  util.py  utils.py
.github/: FUNDING.yml
