[tool.poetry]
name = "SitRep"
version = "1.0.0"
description = "An automated data comparison utility that reports its findings via Discord."
authors = ["Ethan C <EthanC@GitHub.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.22.0"
loguru = "^0.6.0"
notifiers = "^1.3.3"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
